# django-oscar-odin

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  Makefile  README.md  manage.py  noxfile.py  pylintrc  pyproject.toml  runtests.py  setup.py
.github/workflows/: tests.yml
oscar_odin/: __init__.py  apps.py  checks.py  django_resolver.py  exceptions.py  field_resolvers.py  fields.py  inheritable.py  mappings.py  settings.py  utils.py
oscar_odin/fixtures/discounttest/: auth.json  fixtures.json  order.json  partner.json
oscar_odin/fixtures/oscar_odin/: address.json  auth.json  catalogue.json  offer.json  order.json  partner.json
oscar_odin/fixtures/oscar_odin/csv/: products.csv
oscar_odin/fixtures/oscar_odin/test_discount/: address.json  catalogue.json  order.json
oscar_odin/management/commands/: test_illshit.py  test_queries.py
oscar_odin/mappings/: __init__.py  _common.py  _model_mapper.py  address.py  auth.py  catalogue.py  category.py  common.py  constants.py  context.py  defaults.py  helpers.py  model_mapper.py  order.py  partner.py  prefetch.py  resources.py  utils.py
oscar_odin/mappings/prefetching/: prefetch.py  registry.py
oscar_odin/resources/: __init__.py  _base.py  address.py  auth.py  base.py  catalogue.py  category.py  inheritable.py  order.py  partner.py
tests/: test_fields.py  test_mappings.py  test_settings.py  urls.py
tests/mappings/: test_catalogue.py  test_category.py  test_discount.py  test_nested_field_mapping.py  test_order.py  test_prefetch_registry.py
tests/resources/: test_catalogue.py  test_category.py
tests/reverse/: test_catalogue.py  test_deleting_related.py  test_reallifecase.py
